# waylaid

./: Cargo.toml  README.md  sample_config.toml
src/: config.rs  duration.rs  main.rs
