[package]
name = "waylaid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "2.2.0"
test-case = "2.2.2"
thiserror = "1.0.38"
toml = "0.7.1"
